--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.17",
     "tailwindcss": "^4.1.17"
+  },
+  "scripts": {
+    "vercel-build": "npx tailwindcss -i ./src/input.css -o ./src/output.css --content './src/**/*.{html,js}' --minify"
   }
 }
