--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
-  "cleanUrls": true,
-  "trailingSlash": false,
   "rewrites": [
-    { "source": "/", "destination": "/src/pages/index.html" },
-    { "source": "/home", "destination": "/src/pages/index.html" },
-    { "source": "/:path", "destination": "/src/pages/:path.html" }
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/home", "destination": "/index.html" },
+    { "source": "/:path*", "destination": "/:path*.html" }
   ],
   "redirects": [
-    { "source": "/index", "destination": "/home", "permanent": true }
+    { "source": "/index", "destination": "/home", "permanent": true },
+    { "source": "/:path*.html", "destination": "/:path*", "permanent": true }
   ]
 }
+
