--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
+  "cleanUrls": true,
+  "trailingSlash": false,
   "rewrites": [
-    { "source": "/", "destination": "/index.html" },
-    { "source": "/home", "destination": "/index.html" },
-    { "source": "/:path*", "destination": "/:path*.html" }
+    { "source": "/", "destination": "/src/pages/index.html" },
+    { "source": "/home", "destination": "/src/pages/index.html" },
+    { "source": "/:path", "destination": "/src/pages/:path.html" }
   ],
-  "redirects": [
-    { "source": "/index", "destination": "/home", "permanent": true },
-    { "source": "/:path*.html", "destination": "/:path*", "permanent": true }
-  ]
+  "redirects": [{ "source": "/index", "destination": "/home", "permanent": true }]
 }
-
