--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "rewrites": [{ "source": "/:path", "destination": "/:path.html" }],
-  "redirects": [
-    { "source": "/:path.html", "destination": "/:path", "permanent": true }
-  ]
+  "cleanUrls": true,
+  "rewrites": [{ "source": "/:page", "destination": "/pages/:page.html" }]
 }
