--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "cleanUrls": true,
   "rewrites": [
+    { "source": "/login", "destination": "/pages/login.html" },
     { "source": "/redirect", "destination": "/pages/redirect.html" },
-    { "source": "/login", "destination": "/login.html" },
-    { "source": "/signup", "destination": "/signup.html" }
+    { "source": "/signup", "destination": "/pages/signup.html" }
   ]
 }
