--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Dependencies
-/node_modules
+# /node_modules
 
 # Firebase config
-/src/js/firebase-config.js
+# /src/js/firebase-config.js
 
 # Build output
 # If you have a build process, add your output directory here. e.g. /dist
-/src/output.css
+# /src/output.css
 
 # Log files
 npm-debug.log*
