`Update .gitignore and firebase-config.js to ignore dependencies and build output`

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-/src/js/firebase-config.js
+# # Dependencies
+# /node_modules
 
+# # Firebase config
+# # /src/js/firebase-config.js
+
+# # Build output
+# # If you have a build process, add your output directory here. e.g. /dist
+# /src/output.css
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
