`Updated code with various changes, including package-lock.json and package.json updates, addition of canvas-confetti library, and modifications to input.css, signup.js, output.css, and other files.`

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,5 @@
-{"projectId":"prj_UHsHJXPR2lw7CvVmdLOMmkQ5nwfu","orgId":"team_b0N08atM8cQ9eBJiFitI0BkC","projectName":"made4you"}
+{
+  "projectId": "prj_UHsHJXPR2lw7CvVmdLOMmkQ5nwfu",
+  "orgId": "team_b0N08atM8cQ9eBJiFitI0BkC",
+  "projectName": "made4you"
+}
