--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@tailwindcss/cli": "^4.1.17",
+    "canvas-confetti": "^1.9.4",
     "tailwindcss": "^4.1.17"
   },
   "scripts": {
